k8s/base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statuspage-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: statuspage-web
  template:
    metadata:
      labels:
        app: statuspage-web
    spec:
      serviceAccountName: default
      containers:
        - name: web
          image: REPLACE_WITH_YOUR_ECR_REPO_URL:latest
          imagePullPolicy: IfNotPresent
          command: ["/entrypoint.sh"]
          args: ["gunicorn", "statuspage.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "3", "--timeout", "90"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: static-files
              mountPath: /opt/status-page/static_files
      volumes:
        - name: static-files
          persistentVolumeClaim:
            claimName: statuspage-static-pvc
