k8s/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statuspage-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statuspage-worker
  template:
    metadata:
      labels:
        app: statuspage-worker
    spec:
      containers:
        - name: worker
          image: REPLACE_WITH_YOUR_ECR_REPO_URL:latest
          imagePullPolicy: IfNotPresent
          command: ["/entrypoint.sh"]
          args: ["python", "manage.py", "rqworker", "high", "default", "low"]
